# task-messenger

./: .gitignore  LICENSE  README.md  config-manager.json  meson.build  meson_options.txt
dispatcher/: DispatcherApp.cpp  DispatcherApp.hpp  README.md  meson.build
dispatcher/monitoring/: HttpRequestHandler.cpp  HttpRequestHandler.hpp  MonitoringOptions.cpp  MonitoringOptions.hpp  MonitoringService.cpp  MonitoringService.hpp  MonitoringSnapshot.hpp  MonitoringSnapshotBuilder.cpp  MonitoringSnapshotBuilder.hpp  README.md  SnapshotReporter.cpp  SnapshotReporter.hpp
dispatcher/monitoring/dashboard/: README.md  index.html
dispatcher/session/: README.md  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
dispatcher/transport/: AsyncTransportOptions.cpp  AsyncTransportServer.cpp  AsyncTransportServer.hpp  README.md
generators/: README.md  meson.build
generators/auto-refill/: AutoRefillGenerator.cpp  AutoRefillGenerator.hpp  autoRefillMain.cpp  meson.build
generators/common/: GeneratorOptions.cpp  GeneratorOptions.hpp  IGenerator.hpp  SkillTestIterator.cpp  SkillTestIterator.hpp  TaskGenerator.cpp  TaskGenerator.hpp  TaskIdGenerator.hpp  VerificationHelper.cpp  VerificationHelper.hpp  run_generator.hpp
generators/interactive/: InteractiveGenerator.cpp  InteractiveGenerator.hpp  interactiveMain.cpp  meson.build
manager/: ManagerApp.cpp  ManagerApp.hpp  ManagerOptions.cpp  ManagerOptions.hpp  README.md  TaskGenerator.cpp  TaskGenerator.hpp  managerMain.cpp  meson.build
manager/.vn_manager_identity/: identity.public
manager/.vn_manager_identity/peers.d/: 12b64ee911.peer  13a72b27d6.peer  159924d630.peer  18638af27e.peer  29cc39c10e.peer  2de6243cc7.peer  37b0aa5e63.peer  3ac5107d3f.peer  3d90695d14.peer  3f7d3bb15f.peer  42bb3b93da.peer  4426f7e9dd.peer  4fea2a10cc.peer  5c533f4a77.peer  647fd61f23.peer  6ac62411a9.peer  75c2b95d3d.peer  767d165552.peer  802a6715bd.peer  80a17e7f76.peer  8385377e68.peer  879a5b8089.peer  8e0056b99a.peer  970138b2bb.peer  a0ca9d2dc9.peer  a7719e2475.peer  a7b306d1e3.peer  a7e05e1d65.peer  aebe0f4b07.peer  b47fb1583f.peer  b95901c627.peer  c2130c3eb0.peer  c551eebbc3.peer  c594487f6b.peer  c5b8642039.peer  c985877503.peer  dc64cd1551.peer  e7204fd855.peer  ec05b15d36.peer  faa9b08c8c.peer
manager/session/: README.md  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  SessionStats.hpp  TaskVerifier.cpp  TaskVerifier.hpp
manager/transport/: AsyncTransportOptions.cpp  AsyncTransportServer.cpp  AsyncTransportServer.hpp  README.md
rendezvous/: RendezvousClient.cpp  RendezvousClient.hpp  RendezvousOptions.cpp  RendezvousOptions.hpp  RendezvousProtocol.hpp  meson.build
serialize/: README.md  meson.build
serialize/capnproto/: capnp_compile_helper.py  meson.build  test_capnproto.cpp
serialize/capnproto/schemas/: skill_task.capnp
serialize/flatbuffers/: meson.build  test_flatbuffers.cpp
serialize/flatbuffers/schemas/: skill_task.fbs
services/rendezvous/: README.md  RendezvousHttpHandler.cpp  RendezvousServer.cpp  RendezvousServer.hpp  SnapshotListener.cpp  SnapshotListener.hpp  main.cpp  meson.build
skills/: README.md  meson.build
skills/builtins/: Common.fbs  FusedMultiplyAddPayload.hpp  FusedMultiplyAddSkill.cpp  FusedMultiplyAddSkill.fbs  FusedMultiplyAddSkill.hpp  FusedMultiplyAddSkill.skill.toml  FusedMultiplyAddSkill_impl.hpp  MathOperation.hpp  MathOperationPayload.hpp  MathOperationSkill.cpp  MathOperationSkill.fbs  MathOperationSkill.hpp  MathOperationSkill.skill.toml  MathOperationSkill_impl.hpp  README.md  StringReversalPayload.hpp  StringReversalSkill.cpp  StringReversalSkill.fbs  StringReversalSkill.hpp  StringReversalSkill.skill.toml  StringReversalSkill_impl.hpp  VectorMathPayload.hpp  VectorMathSkill.cpp  VectorMathSkill.fbs  VectorMathSkill.hpp  VectorMathSkill.skill.toml  VectorMathSkill_impl.hpp  meson.build
skills/builtins/blas/: DgemmSkill.cpp  DgemmSkill.fbs  DgemmSkill.hpp  DgemmSkill.skill.toml  DgemmSkill_impl.hpp  meson.build
skills/codegen/: README.md  field_types.py  skill_generator.py
skills/handlers/: ISkillHandler.hpp  meson.build
skills/registry/: CompareUtils.cpp  CompareUtils.hpp  IPayloadFactory.hpp  ISkill.hpp  MatrixSpan.hpp  PayloadBuffer.hpp  README.md  Skill.hpp  SkillDescriptor.hpp  SkillIds.hpp  SkillKey.hpp  SkillRegistration.hpp  SkillRegistry.cpp  SkillRegistry.hpp  VerificationResult.hpp  meson.build
skills/schemas/: meson.build
subprojects/capnproto-wrapper/: meson.build
subprojects/ftxui-wrapper/: meson.build
subprojects/libzt-wrapper/: CMakeLists.txt  NodeService.cpp  NodeService.hpp  README.md  apply_libzt_patches.py  build-libzt.ps1  meson.build  meson_options.txt  patch_prometheus_stdexcept.py  patch_quiet_lwip_debug.py  sync_overrides.py  zts_errno.cpp  zts_errno.hpp
subprojects/libzt-wrapper/patches/: prometheus-missing-stdexcept.patch
subprojects/openblas-wrapper/: .gitignore  README.md  checksums.json  download_openblas.py  meson.build  meson_options.txt
subprojects/shared/: NonBlockingThreadSafeQueue.hpp  logger.hpp  meson.build  meson_options.txt  messageTypes.hpp  processUtils.cpp  processUtils.hpp  task.hpp  threadSafeQueue.hpp
transport/: README.md  meson.build
transport/coro/: CoroSocketAdapter.hpp  CoroTask.hpp  README.md  coroIoContext.cpp  coroIoContext.hpp  coroSocketAdapter.cpp
transport/socket/: IAsyncServer.hpp  IAsyncStream.hpp  IBlockingServerSocket.hpp  IBlockingStream.hpp  IClientSocket.hpp  IServerSocket.hpp  ISocketLifecycle.hpp  README.md  SocketFactory.cpp  SocketFactory.hpp  SocketTypeOptions.cpp  SocketTypeOptions.hpp  socket_groups.hpp
worker/: README.md  WorkerOptions.cpp  WorkerOptions.hpp  meson.build  workerMain.cpp
worker-farm/: .gitignore  README.md  ROADMAP.md  go.mod  meson.build
worker/processor/: TaskProcessor.cpp  TaskProcessor.hpp
worker/runtime/: AsyncRuntime.cpp  AsyncRuntime.hpp  BlockingRuntime.cpp  BlockingRuntime.hpp  IRuntimeMode.hpp  README.md
worker/session/: README.md  WorkerSession.cpp  WorkerSession.hpp
worker/ui/: IWorkerService.hpp  README.md  WorkerUI.hpp
(+187 files in other folders)
