option('debug_logging', type: 'boolean', value: false, description: 'Enable debug logging')
option('enable_boost_asio_handler_tracking', type: 'boolean', value: false, description: 'Enable Boost.Asio handler tracking')
option('profiling_unwind', type: 'boolean', value: false, description: 'Enable profiling-friendly unwind flags (-fno-omit-frame-pointer, -fasynchronous-unwind-tables, -fno-optimize-sibling-calls)')
option('build_dispatcher', type: 'boolean', value: true, description: 'Build the dispatcher library')
option('build_worker', type: 'boolean', value: true, description: 'Build the worker component')
option('build_generators', type: 'boolean', value: true, description: 'Build the bundled generator executables')
option('build_rendezvous', type: 'boolean', value: true, description: 'Build the rendezvous service binary')
option('build_worker_farm', type: 'boolean', value: false, description: 'Build the tm-worker-farm Go controller (requires Go 1.22+)')
option('build_serialize_tests', type: 'boolean', value: false, description: 'Build serialization library test cases')
option('enable_blas_skills', type: 'boolean', value: true, description: 'Build BLAS/LAPACK skills (requires OpenBLAS or Apple Accelerate)')
option('dashboard_dir', type: 'string', value: '', description: 'Absolute path to dashboard assets directory (overrides runtime discovery when set)')