# =============================================================================
# Generators Build Configuration
# =============================================================================
# Each generator is a standalone executable that links libtm-manager and
# libskills, owns main(), and submits tasks via submit_task().

subdir('interactive')
subdir('auto-refill')
